functional delete and update

--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,8 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr 8fr 1fr;
 }
 
 
@@ -46,6 +14,7 @@
 h1 {
   font-family: 'Playfair Display', serif;
   color: #F4DDD5;
+
 }
 
 .App {
@@ -60,3 +29,14 @@ body {
 .nav {
   color: #EAE9E5;
 }
+
+main {
+  overflow: auto;
+}
+
+/* .socials {
+  display: flex;
+  flex-flow: row nowrap;
+  gap 1 em;
+  justify-content: center;
+} */
